--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Jazz Practice Pro",
   "short_name": "JazzPrac",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#f8fafc",
+  "background_color": "#ffffff",
   "theme_color": "#475569",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3061/3061173.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2907/2907253.png",
       "sizes": "512x512",
       "type": "image/png"
     }
