--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
 {
-  "name": "Jazz Practice Pro",
-  "short_name": "JazzPrac",
-  "start_url": "./index.html",
+  "name": "Jazz Practice Randomizer",
+  "short_name": "JazzPractice",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#f8fafc",
-  "theme_color": "#1e293b",
+  "theme_color": "#475569",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2907/2907253.png",
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
