--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "JazzPractice",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#f8fafc",
-  "theme_color": "#475569",
+  "background_color": "#ffffff",
+  "theme_color": "#37352f",
   "icons": [
     {
       "src": "icon-192.png",
